syntax = "proto3";

package broker;

option go_package = "github.com/pedromedina19/hermes-broker/pb";

service BrokerService {
  // Publishing is "Fire and Forget" (Unary)
  rpc Publish (PublishRequest) returns (PublishResponse);

  // O cliente abre um stream e manda milhares de msgs. O servidor responde só no final.
  rpc PublishStream (stream PublishRequest) returns (PublishSummary);

  // Envia 1 requisição com 1000 mensagens dentro.
  rpc PublishBatch (PublishBatchRequest) returns (PublishResponse);

  // Subscribing is a continuous flow of data (Server-Side Streaming).
  rpc Subscribe (stream SubscribeRequest) returns (stream Message);

  //cluster management
  rpc Join (JoinRequest) returns (JoinResponse);
}

enum DeliveryMode {
  CONSISTENT = 0;  // Synchronous Raft (Slow, Safe)
  EVENTUAL   = 1; // Synchronous Local Disk + Asynchronous Replication (Fast, Durable on Crash)
  PERFORMANCE = 2; // Synchronous Memory + Asynchronous Disk/Replica (Extremely Fast, Risk of Crash)
}

message PublishRequest {
  string topic = 1;
  bytes payload = 2; // Raw binary data (serialized JSON or anything else)
  DeliveryMode mode = 3;
}

message PublishResponse {
  bool success = 1;
}

message PublishSummary {
  uint64 processed_count = 1;
  uint64 failed_count = 2;
}

message PublishBatchRequest {
  string topic = 1;
  repeated bytes payloads = 2; // Array de payloads
  DeliveryMode mode = 3;
}

message SubscribeRequest {
  string topic = 1;         // Filled in only on the first package (Handshake)
  string ack_message_id = 2; // Filled in when it is an ACK.
  string action = 3;        // "SUBSCRIBE" or "ACK"
  string group_id = 4; // Consumer Group
}

message Message {
  string id = 1;
  string topic = 2;
  bytes payload = 3;
  int64 timestamp = 4;
}

message JoinRequest {
  string node_id = 1;   // Ex: "node-2"
  string raft_addr = 2; // Ex: "localhost:6001" (raft internal address)
}

message JoinResponse {
  bool success = 1;
  string error = 2;
}